# Multi-Variable-lib

./: CMakeLists.txt  LICENSE  MultiVariable.h  README.md  component.mk  keywords.txt  library.json  library.properties
example/: example.cpp
src/: MultiVariable.h
src/core/: MultiVariable.cpp  MultiVariable.h  MultiVariableC.c  Setting.h
